examples/datalog/18_advanced_patterns/110_histogram.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_histogram
Knowledge graph 'test_histogram' created.
Switched to knowledge graph: test_histogram
> .kg use test_histogram
Switched to knowledge graph: test_histogram
> +scores[(45,), (67,), (82,), (91,), (55,), (73,), (88,), (64,), (79,), (95,)].
Inserted 10 fact(s) into 'scores'.
> +grade_bucket(S, "A") :- scores(S), S >= 90.
Rule 'grade_bucket' registered.
> +grade_bucket(S, "B") :- scores(S), S >= 80, S < 90.
Rule 'grade_bucket' registered.
> +grade_bucket(S, "C") :- scores(S), S >= 70, S < 80.
Rule 'grade_bucket' registered.
> +grade_bucket(S, "D") :- scores(S), S >= 60, S < 70.
Rule 'grade_bucket' registered.
> +grade_bucket(S, "F") :- scores(S), S < 60.
Rule 'grade_bucket' registered.
> +histogram(Grade, <COUNT:S>) :- grade_bucket(S, Grade).
Script error: Parse error: Invalid term: '<COUNT:S>'
