examples/datalog/18_advanced_patterns/110_histogram.dl
% Test: Histogram pattern
% Expected: Count occurrences in buckets
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_histogram
.kg use test_histogram

+scores[(45,), (67,), (82,), (91,), (55,), (73,), (88,), (64,), (79,), (95,)].

% Compute grade bucket (simplified)
+grade_bucket(S, "A") :- scores(S), S >= 90.
+grade_bucket(S, "B") :- scores(S), S >= 80, S < 90.
+grade_bucket(S, "C") :- scores(S), S >= 70, S < 80.
+grade_bucket(S, "D") :- scores(S), S >= 60, S < 70.
+grade_bucket(S, "F") :- scores(S), S < 60.

% Count per bucket
+histogram(Grade, <COUNT:S>) :- grade_bucket(S, Grade).

?- histogram(Grade, Count).

.kg use default
.kg drop test_histogram
